--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "prisma": {
-    "schema": "db/schema.prisma",
+    "schema": "prisma/schema.prisma",
     "seed": "ts-node prisma/seed"
   },
   "dependencies": {
@@ -34,10 +34,12 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.12.7",
     "@types/supertest": "^6.0.0",
@@ -46,6 +48,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "faker": "^5.5.3",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.12.1",
