--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,21 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       SERVICE_NAME: mysqldb
-
+  mysqltestdb:
+    image: mysql:8.0
+    container_name: universitytestdb
+    restart: unless-stopped
+    volumes:
+      - mysqltestdb:/var/lib/mysql
+    ports:
+      - "3307:3306"
+    expose:
+        - "3306"
+    environment:
+        MYSQL_DATABASE: ${MYSQL_DATABASE}
+        MYSQL_ROOT_USER: ${MYSQL_ROOT_USER}
+        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+        SERVICE_NAME: mysqltestdb
 volumes:
   mysqldb:
+  mysqltestdb:
