--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "3306"
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_ROOT_USER: ${MYSQL_ROOT_USER}
+      MYSQL_ROOT_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       SERVICE_NAME: mysqldb
@@ -27,7 +27,7 @@ services:
         - "3306"
     environment:
         MYSQL_DATABASE: ${MYSQL_DATABASE}
-        MYSQL_ROOT_USER: ${MYSQL_ROOT_USER}
+        MYSQL_ROOT_USER: ${MYSQL_USER}
         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
         SERVICE_NAME: mysqltestdb
 volumes:
