--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:int": "jest -i --no-cache --watch --config ./test/jest-int.json",
-    "db:restart": "docker-compose down -v && docker-compose up -d && sleep 2",
-    "pretest:int": "npm run db:restart"
+    "db:restart": "docker compose down && docker compose up -d && sleep 1",
+    "pretest:int": "npm run db:restart",
+    "test:int": "jest -i --no-cache --watch --config ./test/jest-int.json"
   },
   "prisma": {
     "schema": "prisma/schema.prisma",
