--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:restart": "docker compose down && docker compose up -d && sleep 1",
-    "pretest:int": "npm run db:restart",
+    "pretest:int": "npm run db:restart && dotenv -e .env.test -- npx prisma migrate reset --force",
     "test:int": "jest -i --no-cache --watch --config ./test/jest-int.json"
   },
   "prisma": {
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.12.1",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
